Adding YT video on my cultural web page
I added the YT video embed of Bagan Period Era dance on my website by using  iframe tag.

I still need to add last section to my cultural page.

--- a/culturepage.html
+++ b/culturepage.html
@@ -74,11 +74,11 @@
 
 
         <!-- Festival Section -->
-<section class="fesival-section">
+<section class="festival-section">
   <h2 class="cultural-page-title">Festivals</h2>
   <p class="cultural-subtitle">An insight into the incredible experiencce in Bagan</p>
 
-  <div class="festival-gallery"></div>
+  <div class="festival-gallery">
   <div class="festival-card">
     <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
     <p class="image-credit">My Description of the Image <br>
@@ -95,43 +95,10 @@
       Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
       Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
       Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
-
-      <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
-    <p class="image-credit">My Description of the Image <br>
-      <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
-    </p>
-    <h3>SHWEZIGON FESTIVAL</h3>
-    <p>Lorem ipsum dolor sit amet. 
-      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
-      Lorem ipsum dolor sit amet. 
-      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
-
-      <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
-      <p class="image-credit">My Description of the Image <br>
-        <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
-      </p>
-      <h3>WATER FESTIVAL</h3>
-      <p>Lorem ipsum dolor sit amet. 
-        Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-        Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-        Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-        Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
-        Lorem ipsum dolor sit amet. 
-        Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-        Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-        Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-        Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
-
-
   </div>
 
-  <!-- <div class="festival-card">
+
+  <div class="festival-card">
     <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
     <p class="image-credit">My Description of the Image <br>
       <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
@@ -147,9 +114,9 @@
       Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
       Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
       Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
-  </div> -->
+  </div>
 
-  <!-- <div class="festival-card">
+  <div class="festival-card">
     <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
     <p class="image-credit">My Description of the Image <br>
       <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
@@ -165,10 +132,23 @@
       Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
       Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
       Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
-  </div> -->
+  </div>
 
   </div>
 </section>
+
+<!-- Cultural Dance Section -->
+ <section class="cultural-dance-section">
+  <h2 class="section-title">Cultural Dance</h2>
+  <div class="cultural-dance-video">
+    <iframe width="100%" height="400" src="https://www.youtube.com/embed/00Ofa_-yK8k?si=NTVr6owl56FrhzW6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <p class="video-credit">Bagan Period Dance on Youtube by Sai Zayar</p>
+  </div>
+  <p> Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+            Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+            Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit </p>
+ </section>
 
 
 <!-- footer content -->
