--- a/culturepage.html
+++ b/culturepage.html
@@ -139,7 +139,7 @@
 
 <!-- Cultural Dance Section -->
  <section class="cultural-dance-section">
-  <h2 class="section-title">Cultural Dance</h2>
+  <h2 class="cultural-page-title">Cultural Dance</h2>
   <div class="cultural-dance-video">
     <iframe width="100%" height="400" src="https://www.youtube.com/embed/00Ofa_-yK8k?si=NTVr6owl56FrhzW6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <p class="video-credit">Bagan Period Dance on Youtube by Sai Zayar</p>
@@ -150,13 +150,38 @@
             Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit </p>
  </section>
 
+ <!-- Another Cultural Section -->
+  <section class="culture-gallery-section">
+  <h2 class="cultural-page-title">HEADING</h2>
+  <p class="cultural-subtitle">Lorem ipsum dolor sit amet. Vel veniam earum</p>
+
+  <div class="cultural-gallery">
+    <div class="cultural-card">
+      <img src="imagesfile/monk.jpg" alt="Festival Image">
+      <p class="image-credit">DESCRIPTION OF IMAGE</p>
+    </div>
+    <div class="cultural-card">
+      <img src="imagesfile/monk.jpg" alt="Festival Image">
+      <p class="image-credit">DESCRIPTION OF IMAGE</p>
+    </div>
+    <div class="cultural-card">
+      <img src="imagesfile/monk.jpg" alt="Festival Image">
+      <p class="image-credit">DESCRIPTION OF IMAGE</p>
+    </div>
+  </div>
+
+   <p> Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
+            Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
+            Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
+            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit am ut mollitia placeat...</p>
+</section>
 
 <!-- footer content -->
 <footer data-aos="fade-up" data-aos-duration="3000">
 
 <div class="row">
     <div class="col">
-        <img src="imagesfile/Logodesignpng.png" class="logo">
+        <div class="logo"><a href="homepage.html"><h1>VOYAGE</h1></a></div>
         <p>Lorem ipsum dolor sit amet. 
             Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
             Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
@@ -164,11 +189,16 @@
             Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
     </div>
     <div class="col">
-        <h2>Title <div class="underline"><span></span></div></h2>
-        <p>>Lorem ipsum dolor</p>
-        <p>Vel veniam earum sed incidunt rerum</p>
-        <p>Qui laboriosam adipisci </p>
-        <p class="email-id">pch22008@my.hghs.school.nz</p>
+        <h2>Resources <div class="underline"><span></span></div></h2>
+    <div class="subcol">
+        <uL>
+            <li><a href="#">UNESCO </a></li>
+            <li><a href="aboutpage.html">Britsh Museum</a></li>
+            <li><a href="historypage.html">InsideAsia</a></li>
+            <li><a href="culturepage.html">GoMyanmarTours</a></li>
+
+        </uL>
+    </div>
     </div>
     <div class="col">
         
