Modifying footer on Cultural Page
Fix: Fixed the padding code of the footer and footer's overly.

Feat: Change the style of footer. I added the Temple Silhouette footer.

Content: No update on content.

Style: Updated the padding, position css on footer

--- a/culturepage.html
+++ b/culturepage.html
@@ -178,6 +178,7 @@
 
 <!-- footer content -->
 <footer data-aos="fade-up" data-aos-duration="3000">
+  <div class="footer-overlay">
 
 <div class="row">
     <div class="col">
@@ -224,6 +225,7 @@
 
 <hr>
 <p class="copyright">Voyage © 2025 - All Rights Reserved</p>
+</div>
     </footer>
     
     <!-- Animation script -->
