Footer Updated to every Page
Since i modify my footer design for all the pages.

--- a/historypage.html
+++ b/historypage.html
@@ -120,6 +120,7 @@
 </section>
 
         <footer data-aos="fade-up" data-aos-duration="3000">
+            <div class="footer-overlay">
 
 <!-- footer content -->
 <div class="row">
@@ -162,6 +163,7 @@
 
 <hr>
 <p class="copyright">Voyage © 2025 - All Rights Reserved</p>
+</div>
     </footer>
     
     <!-- Animation script -->
