--- a/travelpage.html
+++ b/travelpage.html
@@ -73,7 +73,7 @@
         </div>
 
         <footer data-aos="fade-up" data-aos-duration="3000">
-
+          <div class="footer-overlay">
 <!-- footer content -->
 <div class="row">
     <div class="col">
@@ -115,6 +115,8 @@
 
 <hr>
 <p class="copyright">Voyage © 2025 - All Rights Reserved</p>
+</div>
+
     </footer>
     
     <!-- Animation script -->
