--- a/homepage.html
+++ b/homepage.html
@@ -151,6 +151,7 @@
 
 
         <footer data-aos="fade-up" data-aos-duration="3000">
+          <div class="footer-overlay">
 
 <!-- footer content -->
 <div class="row">
@@ -193,6 +194,7 @@
 
 <hr>
 <p class="copyright">Voyage © 2025 - All Rights Reserved</p>
+</div>
     </footer>
     
     <!-- Animation script -->
