--- a/templepage.html
+++ b/templepage.html
@@ -125,6 +125,7 @@
 </section>
 
         <footer data-aos="fade-up" data-aos-duration="3000">
+            <div class="footer-overlay">
 
 <!-- footer content -->
 <div class="row">
@@ -167,6 +168,7 @@
 
 <hr>
 <p class="copyright">Voyage © 2025 - All Rights Reserved</p>
+</div>
     </footer>
     
     <!-- Animation script -->
