--- a/culturepage.html
+++ b/culturepage.html
@@ -182,15 +182,15 @@
 
 <div class="row">
     <div class="col">
-        <div class="logo"><a href="homepage.html"><h1>VOYAGE</h1></a></div>
-        <p>Lorem ipsum dolor sit amet. 
+        <div class="logo" ><a href="homepage.html"><h1>VOYAGE</h1></a></div>
+        <p >Lorem ipsum dolor sit amet. 
             Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
             Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
             Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
             Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
     </div>
     <div class="col">
-        <h2>Resources <div class="underline"><span></span></div></h2>
+        <h2 data-aos="zoom-in" data-aos-duration="5000">Resources <div class="underline"><span></span></div></h2>
     <div class="subcol">
         <uL>
             <li><a href="#">UNESCO </a></li>
@@ -203,8 +203,8 @@
     </div>
     <div class="col">
         
-        <h2>Explore <div class="underline"><span></span></div></h2>
-        <div class="subcol">
+        <h2 >Explore <div class="underline"><span></span></div></h2>
+        <div class="subcol" >
         <uL>
             <li><a href="homepage.html">Discover Bagan</a></li>
             <li><a href="aboutpage.html">About Us</a></li>
@@ -224,7 +224,7 @@
 </div>
 
 <hr>
-<p class="copyright">Voyage © 2025 - All Rights Reserved</p>
+<p class="copyright"data-aos="zoom-in" data-aos-duration="5000">Voyage © 2025 - All Rights Reserved</p>
 </div>
     </footer>
     
