--- a/templepage.html
+++ b/templepage.html
@@ -147,7 +147,7 @@
     <div class="col">
         
         <h2>Explore <div class="underline"><span></span></div></h2>
-        <div class="subcol">
+        <div class="subcol" data-aos="zoom-in" data-aos-duration="3000">
         <uL>
             <li><a href="homepage.html">Discover Bagan</a></li>
             <li><a href="aboutpage.html">About Us</a></li>
@@ -158,7 +158,7 @@
         </uL>
     </div>
 </div>
-    <div class="social-icons">
+    <div class="social-icons" data-aos="zoom-in" data-aos-duration="3000">
         <i class="fa-brands fa-x-twitter"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-solid fa-envelope"></i>
@@ -167,7 +167,7 @@
 </div>
 
 <hr>
-<p class="copyright">Voyage © 2025 - All Rights Reserved</p>
+<p class="copyright" data-aos="zoom-in" data-aos-duration="3000">Voyage © 2025 - All Rights Reserved</p>
 </div>
     </footer>
     
