Responsive design On cultural page
making the website responsive on the cultural page.

--- a/historypage.html
+++ b/historypage.html
@@ -35,7 +35,7 @@
 <!-- Header and Navigation bar -->
         <div class="header">
             <div class="navdiv" data-aos="fade-down" data-aos-duration="3000">
-                <div class="logo"><a href="homepage.html"><h1>VOYAGE</h1></a></div>
+                <div class="logo"><a href="index.html"><h1>VOYAGE</h1></a></div>
                 <div class="navlinks">
                 <ul>
                     <li><a href="aboutpage.html">About</a></li>
@@ -144,7 +144,7 @@
         <h2>Explore <div class="underline"><span></span></div></h2>
         <div class="subcol">
         <uL>
-            <li><a href="homepage.html">Discover Bagan</a></li>
+            <li><a href="index.html">Discover Bagan</a></li>
             <li><a href="aboutpage.html">About Us</a></li>
             <li><a href="historypage.html">History Of Bagan</a></li>
             <li><a href="culturepage.html">Culture Of Bagan</a></li>
