--- a/culturepage.html
+++ b/culturepage.html
@@ -37,7 +37,7 @@
 <!-- Header and Navigation bar -->
         <div class="header">
             <div class="navdiv" data-aos="fade-down" data-aos-duration="3000">
-                <div class="logo"><a href="homepage.html"><h1>VOYAGE</h1></a></div>
+                <div class="logo"><a href="index.html"><h1>VOYAGE</h1></a></div>
                 <div class="navlinks">
                 <ul>
                     <li><a href="aboutpage.html">About</a></li>
