Updating css, index, about page and trave

--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
         </div>
 
 
-
-
-
-
-
 <!-- about heading with image and text on side -->
         <section class="homepage-about">
-            
-        <div class="homepage-about-left"data-aos="fade-up" data-aos-duration="3000">
+<div class="homepage-about-left"data-aos="fade-up" data-aos-duration="3000"></divclass>
+        <div  class="homepage-about-text">
             <h2>TIME LESS BEAUTY OF BAGAN</h2>
             <p class="subheading">An insight into the incredible experience in the world</p>
-            <img src="imagesfile/Temple_n_trees.jpg" alt="Bagan" >
+
         </div> 
+
+        <div class="homepage-about-image">
+          <img src="imagesfile/Temple_n_trees.jpg" alt="Bagan" >
+        </div>
+        </div>
 
             <div class="homepage-about-right" data-aos="fade-up" data-aos-duration="3000">
             <p>Lorem ipsum dolor sit amet. Vel veniam earum sed incidunt rerum quo temporibus 
@@ -111,14 +111,14 @@
   <!-- 1st row: HISTORY & CULTURE -->
   <div class="row-of-cards">
     <div class="homepage-card" data-aos="fade-up" data-aos-duration="3000">
-      <img src="imagesfile/BaganErapaintingofThingyan.jpg" alt="History">
+      <img src="imagesfile/BaganErapaintingofThingyan - Copy.jpg" alt="History">
       <div class="card-content">
         <a href="historypage.html" class="homepagebutton">HISTORY</a>
       </div>
     </div>
 
     <div class="homepage-card" data-aos="fade-up" data-aos-duration="3000">
-      <img src="imagesfile/puppets.jpg" alt="Culture">
+      <img src="imagesfile/puppets - Copy.jpg" alt="Culture">
       <div class="card-content">
         <a href="culturepage.html" class="homepagebutton">CULTURE</a>
       </div>
@@ -128,14 +128,14 @@
    <!-- 2nd row: TRAVEL & TEMPLES -->
   <div class="row-of-cards">
     <div class="homepage-card" data-aos="fade-up" data-aos-duration="3000">
-      <img src="imagesfile/transport - Copy.jpg" alt="Travel">
+      <img src="imagesfile/transport.jpg" alt="Travel">
       <div class="card-content">
         <a href="travelpage.html" class="homepagebutton">TRAVEL</a>
       </div>
     </div>
 
     <div class="homepage-card" data-aos="fade-up" data-aos-duration="3000">
-      <img src="imagesfile/templeimg1 - Copy.jpg" alt="Temples">
+      <img src="imagesfile/templeimg1.jpg" alt="Temples">
       <div class="card-content">
         <a href="templepage.html" class="homepagebutton">TEMPLES</a>
       </div>
