--- a/aboutpage.html
+++ b/aboutpage.html
@@ -67,8 +67,10 @@
             <div class="about-this-page-header">
             <h1 data-aos="fade-up" data-aos-duration="3000">ABOUT THIS SITE</h1>
             <p data-aos="fade-up" data-aos-duration="3000">
-        Lorem ipsum dolor sit amet. Vel veniam earum sed incidunt rerum quo temporibus animi...
-        Et mollitia nihil est fugiat repellendus aut voluptatem dolores ut facilis mollitia aut vitae quidem.
+       This site was developed to showcase the beauty, culture, and history of Bagan, Myanmar. 
+       Our goal is to help you experience the charm of this ancient city through inspiring stories, photographs, travel tips, 
+       and Burmese culture. Whether you are planning a visit or are simply curious about this ancient city, 
+       you’ll find everything you need to explore this remarkable heritage site.
             </p>
 
                 <div class="about-this-page-social-icons" data-aos="fade-up" data-aos-duration="3000">
