--- a/culturepage.html
+++ b/culturepage.html
@@ -76,7 +76,8 @@
         <!-- Festival Section -->
 <section class="festival-section">
   <h2 class="cultural-page-title">Festivals</h2>
-  <p class="cultural-subtitle">An insight into the incredible experiencce in Bagan</p>
+  <p class="cultural-subtitle">Festivals in Bagan are deeply rooted in Buddhist traditions and local culture.<br>
+     Each celebration brings together communities and visitors through music, food and light</p>
 
   <div class="festival-gallery">
   <div class="festival-card">
@@ -85,53 +86,47 @@
       <span class="credit">By Aung Myint Htwe - Own work, CC BY-SA 4.0, <a href="https://commons.wikimedia.org/w/index.php?curid=72920218">On Wikimedia Commons</a></span>
     </p>
     <h3>Lighting Festival</h3>
-    <p>Lorem ipsum dolor sit amet. 
-      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
-      Lorem ipsum dolor sit amet. 
-      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+    <p>The Lighting Festival is called Thadingyut in Burmese. 
+      It is celebrated nationally at the end of the Buddhist Lent in October.
+       During the festival night, homes, temples, and pagodas across Bagan and the entire country are illuminated with thousands of candles,
+        lanterns, and oil lamps to honor the Buddha’s descent from heaven. 
+        It is a time for families to pay respect to their elders and make offerings at monasteries. 
+        People also give gifts to their loved ones. Beautiful fireworks and lantern releases at pagodas make the celebration even more special. 
+        The festival creates a vibrant atmosphere filled with lights, music, and traditional snacks.</p>
   </div>
 
 
   <div class="festival-card">
-    <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
+    <img src="imagesfile/monk.jpg" alt="LightingFestival">
     <p class="image-credit">My Description of the Image <br>
       <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
     </p>
     <h3>SHWEZIGON FESTIVAL</h3>
-    <p>Lorem ipsum dolor sit amet. 
-      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
-      Lorem ipsum dolor sit amet. 
-      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+    <p>The Shwezigon Festival is a yearly festival celebrated on the full moon day of Tazaungmone (in November).
+       It is one of the most famous and busiest festivals in Bagan and has been celebrated since the Bagan dynasty.
+        The festival lasts for 15 days and remains a deeply rooted tradition in Myanmar’s cultural and 
+        religious life. It is held around the Shwezigon Pagoda, 
+        a significant Buddhist shrine in Bagan. Pilgrims from across Myanmar gather
+         to offer prayers, make donations, and take part in the ritual of presenting alms bowls filled
+          with offerings to over a thousand monks and novices. 
+          The festival also features traditional music and dance performances with  market stalls where 
+          locals sell lacquerware, glazed pots, handwoven cotton blankets, local crafts, food, and household items.</p>
   </div>
 
   <div class="festival-card">
-    <img src="imagesfile/Lighting_Festival.jpg" alt="LightingFestival">
+    <img src="imagesfile/Rakhine_Thingyan_2011.jpeg" alt="LightingFestival">
     <p class="image-credit">My Description of the Image <br>
       <span class="credit">By Name - Own work, CC BY-SA 4.0, <a href="#">On Wikimedia Commons</a></span>
     </p>
     <h3>WATER FESTIVAL</h3>
-    <p>Lorem ipsum dolor sit amet. 
-      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
-      Lorem ipsum dolor sit amet. 
-      Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-      Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-      Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-      Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+    <p>The Water Festival, also known as Thingyan, is a 4–5 day celebration of the Burmese New Year.
+       It is held in mid-April during the summer season. 
+       The festival is a time for cleansing bad luck and misfortunes from the previous year and 
+       welcoming the new year with a fresh, joyous start.
+        The splashing of water symbolizes washing away sins and impurities from the past year. 
+        This celebration is held throughout Myanmar with concerts, traditional performances, and various cultural activities. 
+        While it is a joyous festival, there are cultural sensitivities: it is not appropriate to splash water on monks,
+         the elderly, pregnant women, or babies.</p>
   </div>
 
   </div>
@@ -157,11 +152,11 @@
 
   <div class="cultural-gallery">
     <div class="cultural-card">
-      <img src="imagesfile/monk.jpg" alt="Festival Image">
+      <img src="imagesfile/myanmar-4123323_1280.jpg" alt="Festival Image">
       <p class="image-credit">DESCRIPTION OF IMAGE</p>
     </div>
     <div class="cultural-card">
-      <img src="imagesfile/monk.jpg" alt="Festival Image">
+      <img src="imagesfile/Taking_off_shoes.jpg" alt="Festival Image">
       <p class="image-credit">DESCRIPTION OF IMAGE</p>
     </div>
     <div class="cultural-card">
@@ -183,11 +178,9 @@
 <div class="row">
     <div class="col">
         <div class="logo" ><a href="homepage.html"><h1>VOYAGE</h1></a></div>
-        <p >Lorem ipsum dolor sit amet. 
-            Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-            Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-            Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+        <p>Voyage is dedicated to sharing the beauty, history, and culture of Bagan, Myanmar. 
+          Explore ancient temples, local traditions, 
+          and travel tips to make the most of your visit</p>
     </div>
     <div class="col">
         <h2 data-aos="zoom-in" data-aos-duration="5000">Resources <div class="underline"><span></span></div></h2>
@@ -224,7 +217,7 @@
 </div>
 
 <hr>
-<p class="copyright"data-aos="zoom-in" data-aos-duration="5000">Voyage © 2025 - All Rights Reserved</p>
+<p class="copyright">Voyage © 2025 - All Rights Reserved</p>
 </div>
     </footer>
     
