--- a/index.html
+++ b/index.html
@@ -88,15 +88,9 @@
         </div>
 
             <div class="homepage-about-right" data-aos="fade-up" data-aos-duration="3000">
-            <p>Lorem ipsum dolor sit amet. Vel veniam earum sed incidunt rerum quo temporibus 
-            animi a culpa quisquam ut mollitia placeat.
-             Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-             Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-             Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!
-             Et mollitia nihil est fugiat repellendus aut voluptatem dolores ut facilis mollitia 
-             aut vitae quidem. Qui omnis fuga aut quibusdam molestiae eum error accusantium.
+            <p>Bagan is one of the world’s greatest and most unique archaeological sites. It is home to over 2,000 temples. From the beautiful sunrises and rich cultural traditions to the breathtaking sunsets, Bagan offers an unforgettable journey into histor
             </p>
-            <button class="enter-button" data-aos="fade-up" data-aos-duration="3000">ENTER</button>
+            <button class="enter-button" data-aos="fade-up" data-aos-duration="3000"><a href="aboutpage.html">DISCOVER MORE <Br> ABOUT THIS WEBSITE</a></button>
             </div>
         </section>
 
