js carousel and dark mode
Fix: there is a double scroll bar on the right side of the page. I still haven't  found a way to fix it yet.

Feat: Added dark mode switch to the everypage by using html, css and js. I still need to work on colour change on everypage except the index page.

Feat: I changed the topic sections to carousel slide after I got feedback from my end-users.

--- a/historypage.html
+++ b/historypage.html
@@ -48,18 +48,11 @@
             </div>
 
 
-<!-- search bar -->
-
-      <button class="openbtn" onclick="openSearch()"><i class="fa fa-search"></i></button>
-      <div class="search" id="SearchOverlay">
-        <div class="search-content">
-          <form>
-            <input type="text" name="search" placeholder="Search...">
-            <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
-        </div>
-        <span class="closebtn" onclick="closeSearch()" class="" title="close">X</span>
-      </div>
+<!-- Dark/Light Mode Toggle -->
+<button id="theme-toggle">
+  <i class="fa fa-moon" id="theme-icon"></i>
+  <i class="fa fa-sun" id="theme-icon"></i>
+</button>
 
             </div>
 
@@ -123,28 +116,34 @@
             <div class="footer-overlay">
 
 <!-- footer content -->
+<footer data-aos="fade-up" data-aos-duration="3000">
+  <div class="footer-overlay">
+
 <div class="row">
     <div class="col">
-        <img src="imagesfile/Logodesignpng.png" class="logo">
-        <p>Lorem ipsum dolor sit amet. 
-            Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-            Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-            Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+        <div class="logo" ><a href="homepage.html"><h1>VOYAGE</h1></a></div>
+        <p>Voyage is dedicated to sharing the beauty, history, and culture of Bagan, Myanmar. 
+          Explore ancient temples, local traditions, 
+          and travel tips to make the most of your visit</p>
     </div>
     <div class="col">
-        <h2>Title <div class="underline"><span></span></div></h2>
-        <p>>Lorem ipsum dolor</p>
-        <p>Vel veniam earum sed incidunt rerum</p>
-        <p>Qui laboriosam adipisci </p>
-        <p class="email-id">pch22008@my.hghs.school.nz</p>
+        <h2 data-aos="zoom-in" data-aos-duration="5000">Resources <div class="underline"><span></span></div></h2>
+    <div class="subcol">
+        <uL>
+            <li><a href="#">UNESCO </a></li>
+            <li><a href="aboutpage.html">Britsh Museum</a></li>
+            <li><a href="historypage.html">InsideAsia</a></li>
+            <li><a href="culturepage.html">GoMyanmarTours</a></li>
+
+        </uL>
+    </div>
     </div>
     <div class="col">
         
-        <h2>Explore <div class="underline"><span></span></div></h2>
-        <div class="subcol">
+        <h2 >Explore <div class="underline"><span></span></div></h2>
+        <div class="subcol" >
         <uL>
-            <li><a href="index.html">Discover Bagan</a></li>
+            <li><a href="homepage.html">Discover Bagan</a></li>
             <li><a href="aboutpage.html">About Us</a></li>
             <li><a href="historypage.html">History Of Bagan</a></li>
             <li><a href="culturepage.html">Culture Of Bagan</a></li>
@@ -182,5 +181,29 @@
     }
   </script>
 
+ <!-- Link custom script -->
+  <script src="script.js"></script>
+
+    <script>
+    let darkmode = localStorage.getItem('darkmode')
+  const toggleButton = document.getElementById('theme-toggle');
+
+  const enableDarkmode = () => {
+    document.body.classList.add('darkmode')
+    localStorage.setItem('darkmode', 'active')
+  }
+
+    const disableDarkmode = () => {
+    document.body.classList.remove('darkmode')
+    localStorage.setItem('darkmode', null)
+  }
+
+  if(darkmode === "active") enableDarkmode()
+
+  toggleButton.addEventListener("click", () => {
+    darkmode = localStorage.getItem('darkmode')
+    darkmode !== "active" ? enableDarkmode() : disableDarkmode()
+  })
+  </script>
     </body>
 </html>
