--- a/culturepage.html
+++ b/culturepage.html
@@ -50,18 +50,11 @@
             </div>
                 <!-- <div class="search"><a href="#">Search</a></div> -->
 
-<!-- search bar -->
-
-      <button class="openbtn" onclick="openSearch()"><i class="fa fa-search"></i></button>
-      <div class="search" id="SearchOverlay">
-        <div class="search-content">
-          <form>
-            <input type="text" name="search" placeholder="Search...">
-            <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
-        </div>
-        <span class="closebtn" onclick="closeSearch()" class="" title="close">X</span>
-      </div>
+<!-- Dark/Light Mode Toggle -->
+<button id="theme-toggle">
+  <i class="fa fa-moon" id="theme-icon"></i>
+  <i class="fa fa-sun" id="theme-icon"></i>
+</button>
 
             </div>
 
@@ -261,5 +254,29 @@
   })
 </script>
 
+ <!-- Link custom script -->
+  <script src="script.js"></script>
+
+    <script>
+    let darkmode = localStorage.getItem('darkmode')
+  const toggleButton = document.getElementById('theme-toggle');
+
+  const enableDarkmode = () => {
+    document.body.classList.add('darkmode')
+    localStorage.setItem('darkmode', 'active')
+  }
+
+    const disableDarkmode = () => {
+    document.body.classList.remove('darkmode')
+    localStorage.setItem('darkmode', null)
+  }
+
+  if(darkmode === "active") enableDarkmode()
+
+  toggleButton.addEventListener("click", () => {
+    darkmode = localStorage.getItem('darkmode')
+    darkmode !== "active" ? enableDarkmode() : disableDarkmode()
+  })
+  </script>
     </body>
 </html>
