--- a/templepage.html
+++ b/templepage.html
@@ -50,18 +50,11 @@
 
             </div>
 
-<!-- search bar -->
-
-      <button class="openbtn" onclick="openSearch()"><i class="fa fa-search"></i></button>
-      <div class="search" id="SearchOverlay">
-        <div class="search-content">
-          <form>
-            <input type="text" name="search" placeholder="Search...">
-            <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
-        </div>
-        <span class="closebtn" onclick="closeSearch()" class="" title="close">X</span>
-      </div>
+<!-- Dark/Light Mode Toggle -->
+<button id="theme-toggle">
+  <i class="fa fa-moon" id="theme-icon"></i>
+  <i class="fa fa-sun" id="theme-icon"></i>
+</button>
 
             </div>
 
@@ -128,28 +121,34 @@
             <div class="footer-overlay">
 
 <!-- footer content -->
+<footer data-aos="fade-up" data-aos-duration="3000">
+  <div class="footer-overlay">
+
 <div class="row">
     <div class="col">
-        <img src="imagesfile/Logodesignpng.png" class="logo">
-        <p>Lorem ipsum dolor sit amet. 
-            Vel veniam earum sed incidunt rerum quo temporibus animi a culpa quisquam ut mollitia placeat. 
-            Qui laboriosam adipisci est assumenda laboriosam vel asperiores corporis. 
-            Sed quasi architecto non ipsa dolores eum dignissimos beatae qui galisum consequatur. 
-            Ea culpa alias et facere distinctio est quod similique ea voluptate Quis et reprehenderit consequuntur!</p>
+        <div class="logo" ><a href="homepage.html"><h1>VOYAGE</h1></a></div>
+        <p>Voyage is dedicated to sharing the beauty, history, and culture of Bagan, Myanmar. 
+          Explore ancient temples, local traditions, 
+          and travel tips to make the most of your visit</p>
     </div>
     <div class="col">
-        <h2>Title <div class="underline"><span></span></div></h2>
-        <p>>Lorem ipsum dolor</p>
-        <p>Vel veniam earum sed incidunt rerum</p>
-        <p>Qui laboriosam adipisci </p>
-        <p class="email-id">pch22008@my.hghs.school.nz</p>
+        <h2 data-aos="zoom-in" data-aos-duration="5000">Resources <div class="underline"><span></span></div></h2>
+    <div class="subcol">
+        <uL>
+            <li><a href="#">UNESCO </a></li>
+            <li><a href="aboutpage.html">Britsh Museum</a></li>
+            <li><a href="historypage.html">InsideAsia</a></li>
+            <li><a href="culturepage.html">GoMyanmarTours</a></li>
+
+        </uL>
+    </div>
     </div>
     <div class="col">
         
-        <h2>Explore <div class="underline"><span></span></div></h2>
-        <div class="subcol" data-aos="zoom-in" data-aos-duration="3000">
+        <h2 >Explore <div class="underline"><span></span></div></h2>
+        <div class="subcol" >
         <uL>
-            <li><a href="index.html">Discover Bagan</a></li>
+            <li><a href="homepage.html">Discover Bagan</a></li>
             <li><a href="aboutpage.html">About Us</a></li>
             <li><a href="historypage.html">History Of Bagan</a></li>
             <li><a href="culturepage.html">Culture Of Bagan</a></li>
@@ -158,7 +157,7 @@
         </uL>
     </div>
 </div>
-    <div class="social-icons" data-aos="zoom-in" data-aos-duration="3000">
+    <div class="social-icons">
         <i class="fa-brands fa-x-twitter"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-solid fa-envelope"></i>
@@ -167,7 +166,7 @@
 </div>
 
 <hr>
-<p class="copyright" data-aos="zoom-in" data-aos-duration="3000">Voyage © 2025 - All Rights Reserved</p>
+<p class="copyright">Voyage © 2025 - All Rights Reserved</p>
 </div>
     </footer>
     
@@ -212,5 +211,29 @@
     })
   </script>
 
+ <!-- Link custom script -->
+  <script src="script.js"></script>
+
+    <script>
+    let darkmode = localStorage.getItem('darkmode')
+  const toggleButton = document.getElementById('theme-toggle');
+
+  const enableDarkmode = () => {
+    document.body.classList.add('darkmode')
+    localStorage.setItem('darkmode', 'active')
+  }
+
+    const disableDarkmode = () => {
+    document.body.classList.remove('darkmode')
+    localStorage.setItem('darkmode', null)
+  }
+
+  if(darkmode === "active") enableDarkmode()
+
+  toggleButton.addEventListener("click", () => {
+    darkmode = localStorage.getItem('darkmode')
+    darkmode !== "active" ? enableDarkmode() : disableDarkmode()
+  })
+  </script>
     </body>
 </html>
