--- a/index.html
+++ b/index.html
@@ -139,7 +139,11 @@
         </section> -->
 
 <section class="topics-section">
-  <div class="topic-section-title"><h1>----Topics----</h1></div>
+  <div class="topic-section-title">
+    <span class="line"></span>
+    <h1 class="topics"> Topics </h1>
+    <span class="line"></span>
+  </div>
   <div class="container swiper">
     <div class="card-wrapper">
       <ul class="card-list swiper-wrapper">
