--- a/templepage.html
+++ b/templepage.html
@@ -51,9 +51,14 @@
             </div>
 
 <!-- Dark/Light Mode Toggle -->
-<button id="theme-toggle">
+<!-- <button id="theme-toggle">
   <i class="fa fa-moon" id="theme-icon"></i>
   <i class="fa fa-sun" id="theme-icon"></i>
+</button> -->
+
+<button id="theme-toggle">
+  <i class="fa fa-moon moon-icon"></i>
+  <i class="fa fa-sun sun-icon"></i>
 </button>
 
             </div>
