--- a/aboutpage.html
+++ b/aboutpage.html
@@ -66,14 +66,39 @@
        you’ll find everything you need to explore this remarkable heritage site.
             </p>
 
-                <div class="about-this-page-social-icons" data-aos="fade-up" data-aos-duration="3000">
-        <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram"></i></a>
-        <a href="#"><i class="fa-solid fa-envelope"></i></a>
+ <div id="SocialIconsAbout">
+  
+  <div class="icons instaIcon">
+    <p class="iconName">Instagram</p>
+    <div class="icon insta">
+      <a href="https://www.instagram.com/draw.3r?igsh=djRlNGV1djF4aWww" target="_blank">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
     </div>
+  </div>
+
+  <div class="icons xIcon">
+    <p class="iconName">X</p>
+    <div class="icon x">
+      <a href="https://x.com/draww3r?t=JLg_mFaoE8FximGEldy27w&s=33" target="_blank">
+        <i class="fa-brands fa-x-twitter"></i>
+      </a>
+    </div>
+  </div>
+
+  <div class="icons emailIcon">
+    <p class="iconName">Email</p>
+    <div class="icon email">
+      <a href="mailto:pch22008@my.hghs.school.nz">
+        <i class="fa-solid fa-envelope"></i>
+      </a>
+    </div>
+  </div>
+</div>
         </div>
 
-        </div>
+
+        
     
     <!-- Animation script -->
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -81,15 +106,6 @@
     AOS.init();
   </script>
 
-  <script>
-    function openSearch(){
-      document.getElementById("SearchOverlay").style.display="block";
-    }
-
-    function closeSearch(){
-      document.getElementById("SearchOverlay").style.display="none";
-    }
-  </script>
 
  <!-- Link custom script -->
   <script src="script.js"></script>
